[package]
name = "perseus-compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
perseus = { git = "https://github.com/framesurge/perseus.git" }
brotli = { version = "3", default-features = false, features = ["std"], optional = true }
flate2 = { version = "1", optional = true }

[features]
brotli = ["dep:brotli"]
gzip = ["dep:flate2"]